# agent-slides-v2

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODOS.md  WORKFLOW.github.md  program-demo.md  pyproject.toml  symphony.sh
.claude/skills/: learn-template
.github/workflows/: ci.yml
benchmarks/: bcg-strategy.md  bcg-update.md  layout-showcase.md  minimal-title-body.md  quarterly-update.md  strategy-deck.md
config/excluded_layouts/: bcg.manifest.excluded.json  brand-template.json  demo-template.json
docs/: agent-contract.md  architecture.md  auto-layout.md  charts.md  cli-reference.md  preview-server.md  template-ingestion.md
docs/decisions/: 0001-structured-text-model.md  0002-computed-layout-persistence.md
examples/: example2.manifest.json  example2.pptx  examples
fixtures/layout_cases/: blank.json  heading_body.json  heading_body_image.json  heading_image.json  heading_only.json  multi_slot.json
references/: chart-guide.md  layout-selection.md
runs/: .gitignore
scripts/: benchmark_layers.py  compare_coverage.py  demo_research.py  export_layout_inventory.py  generate_coverage_matrix.py  generate_layout_cert_suite.py  generate_layout_fixtures.py  run_cert_layer.py  run_cycle.sh
skills/create-deck/: SKILL.md
skills/create-deck/references/: chart-guide.md  common-mistakes.md  content-density.md  layout-selection.md  storytelling.md
skills/demo-cycle/: SKILL.md
skills/edit-slide/: SKILL.md
skills/references/: storytelling.md
skills/review-deck/: SKILL.md
src/agent_slides/: __init__.py  __main__.py  cli.py  contract.py  errors.py  orchestrator.py  patterns.py  preview.py  render_oracle.py  review.py  template_slots.py
src/agent_slides.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agent_slides/commands/: __init__.py  batch.py  build.py  chart.py  chat.py  contract.py  icon.py  info.py  init.py  inspect_cmd.py  learn.py  mutations.py  ops.py  pattern.py  preview.py  review.py  shape.py  slide.py  slot.py  suggest_layout.py  table.py  theme.py  validate_cmd.py  warnings.py
src/agent_slides/config/: __init__.py
src/agent_slides/engine/: __init__.py  conditional_formatting.py  constraints.py  layout_suggest.py  layout_suggestions.py  layout_validator.py  reflow.py  slide_revisions.py  template_reflow.py  text_fit.py  validator.py
src/agent_slides/icons/: __init__.py  library.json
tests/: image_helpers.py  test_cert_suite_generator.py  test_cli.py  test_commands.py  test_compare_coverage.py  test_constraints.py  test_contract.py  test_coverage_matrix.py  test_create_deck_skill.py  test_demo_research.py  test_design_rules.py  test_e2e.py  test_e2e_charts.py  test_e2e_chat.py  test_e2e_template.py  test_export_layout_inventory.py  test_generate_layout_fixtures.py  test_layout_suggest.py  test_layout_validator.py  test_layouts.py  test_learn.py  test_learn_template_skill.py  test_orchestrator.py  test_pptx_writer.py  test_preview.py  test_preview_e2e.py  test_preview_renderer.py  test_reflow.py  test_reflow_images.py  test_render_oracle.py  test_review.py  test_run_cert_layer.py  test_sidecar.py  test_template_layouts.py  test_template_reflow.py  test_text_fit.py  test_themes.py  test_types.py  test_validator.py
(+32 files in other folders)
